# space_invaders

./: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  Pipfile  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
space_invaders/: __init__.py  constants.py  si_sprites.py  space_invaders.py
tests/: __init__.py  test_space_invaders.py
