[tool.poetry]
name = "space_invaders"
version = "0.1.0"
description = "Space Invaders game using arcade library"
authors = ["Jon Fincher <jfincher42@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
arcade = "^2.0"

[tool.poetry.dev-dependencies]
black = { version = "*", allows-prereleases = true }
flake8 = "^3.7.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
